# EasyFramework

./: .gitignore  README.md  pyproject.toml  testdb.db
easy_framework/: __init__.py  _context.py  _meta.py  config.py  decorators.py  easy_framework.py
easy_framework/auth/: __init__.py  _authManager.py  _authModel.py  _authModelMongo.py  _authSerializer.py  _authView.py  _baseAuthMethod.py  _databaseMethodMongo.py  _databaseMethodSql.py  _password.py
easy_framework/exception/: __init__.py  apiExceptions.py  baseException.py
easy_framework/model/: __init__.py  _baseModelMongo.py  _baseModelSql.py  _utils.py
easy_framework/serializer/: __init__.py  _baseSerializerMongo.py  _baseSerializerSql.py
easy_framework/user/: __init__.py  userManager.py  userMixin.py  userModel.py  userModelMongo.py  utils.py
easy_framework/validator/: __init__.py  _baseValidator.py  _login_required.py  _self_required.py
easy_framework/view/: __init__.py  _genericApiView.py  _utils.py  _viewHandler.py
test_old/: easy_framework_conftest.py  testClasses.py
test_old/auth/: _test_authModel.py  test_authView.py  test_database_method.py
test_old/database/: test_db_mongo.py  test_db_sql.py
test_old/model/: test_baseModelMongo.py  test_baseModelSql.py  test_modelConstructor.py
test_old/serializer/: test_baseSerializerMongo.py  test_baseSerializerSql.py
test_old/user/: test_current_user.py  test_current_user_mongo.py  test_userModel.py
test_old/validators/: test_base_validator.py  test_login_required.py  test_self_required.py
tests/: __init__.py  classes.py
(+33 files in other folders)
